<resources>
    <string name="app_name">FMT</string>
    <string name="i_love_her_i_submit_to_him">I LOVE HER, I SUBMIT TO HIM</string>
    <string name="sign_in">sign in</string>
    <string name="user_name_or_phone_number">User Name or Phone number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="please_select_your_gender">Please Select Your Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">next</string>
    <string name="already_a_member">Already a member?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_10_of_your_subscription_fee_will_be_donated">10% of your subscription fee will be donated</string>
    <string name="partnered_charities">Partnered Charities</string>
    <string name="please_allow_your_current_location">Please allow your current location</string>
    <string name="i_agree_term_and_conditions">I agree term and conditions |</string>
    <string name="read_more">Read More</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="contact_us">Contact Us</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="otp">OTP</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="enter_4_digit_verification_code">Enter 4 digit verification code</string>
    <string name="resend">Resend</string>
    <string name="ephesians_5_22_25">Ephesians 5:22-25</string>
    <string name="app_record">Record Video</string>
</resources>
